@startuml
'https://plantuml.com/class-diagram
class ExerciseValidator {
  - VALIDATORS: Validator[]

  + validate(): void
}

abstract class Validator {
  # obj: Object

  + validate(): void
}

class DateValidator
class ExerciseTypeValidator
class ExerciseIntensityValidator
class ExerciseDurationValidator

DateValidator --|> Validator
ExerciseTypeValidator --|> Validator
ExerciseDurationValidator --|> Validator
ExerciseIntensityValidator --|> Validator

ExerciseValidator *-up-> Validator

@enduml